5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1861_3210.log
== TEST (2019-06-26 19:30:27) 
-- CODE:
from numpy import*
v = array(eval(input("d: "))).splite(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]

a = max(matriz)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:30:55) 
-- CODE:
from numpy import*
v = array(eval(input("d: "))).splite(",")
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]

a = max(matriz)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:31:19) 
-- CODE:
from numpy import*
v = array(eval(input("d: "))).split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]

a = max(matriz)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:31:46) 
-- CODE:
from numpy import*
v = array(input("d: ")).split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]

a = max(matriz)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:32:06) 
-- CODE:
from numpy import*
v = (input("d: ")).split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]

a = max(matriz)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:33:02) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = (input("d: ")).split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]

a = max(matriz)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:35:24) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]

a = max(matriz)
print("O aluno que tem possui a maior nota e o aluno")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:37:57) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
i = 0
a = max(matriz)
while	(i != a ):
		i = i + 1
print("O aluno que tem possui a maior nota e o aluno"v[i])
	
-- EXECUTION TIME:
0.812
-- ERROR:
  File "/home/codebench/codes/1861/3210/main.py", line 10
    print("O aluno que tem possui a maior nota e o aluno"v[i])
                                                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:38:00) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
i = 0
a = max(matriz)
while	(i != a ):
		i = i + 1
print("O aluno que tem possui a maior nota e o aluno"v[i])
	
-- ERROR:
File "XXXX", line 10
    print("O aluno que tem possui a maior nota e o aluno"v[i])
                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:38:13) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
i = 0
a = max(matriz)
while	(i != a ):
		i = i + 1
print("O aluno que tem possui a maior nota e o aluno",v[i])
	
-- EXECUTION TIME:
1.19737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/3210/main.py", line 7, in <module>
    a = max(matriz)
TypeError: iteration over a 0-d array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:38:13) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
i = 0
a = max(matriz)
while	(i != a ):
		i = i + 1
print("O aluno que tem possui a maior nota e o aluno",v[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:39:28) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
i = 0
a = max(matriz)
while	(i != a ):
		i = i + 1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:41:57) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
b = 0
a = max(matriz)
for i in v:
	b = b + 1

print("O aluno que tem possui a maior nota e o aluno",v[b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:42:56) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = array(input("d: ")).split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
b = 0
a = max(matriz)
for i in v:
	b = b + 1

print("O aluno que tem possui a maior nota e o aluno",v[b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:43:04) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = array(input("d: ")).split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
b = 0
a = max(matriz)
for i in v:
	b = b + 1

print("O aluno que tem possui a maior nota e o aluno",v[b])
	
-- EXECUTION TIME:
1.1987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/3210/main.py", line 3, in <module>
    v = array(input()).split(',')
AttributeError: 'numpy.ndarray' object has no attribute 'split'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:43:05) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = array(input("d: ")).split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
b = 0
a = max(matriz)
for i in v:
	b = b + 1

print("O aluno que tem possui a maior nota e o aluno",v[b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:43:39) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(v)[0]
b = 0
a = max(matriz)
for i in v:
	print(i)

print("O aluno que tem possui a maior nota e o aluno",v[b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:46:12) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(matriz)[0]
b = 0

for i in matriz:
	if	(i == max(matriz)):
			b = i

print("O aluno que tem possui a maior nota e o aluno",v[b])
	
-- EXECUTION TIME:
1.02822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/3210/main.py", line 5, in <module>
    a = shape(matriz)[0]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:46:14) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(matriz)[0]
b = 0

for i in matriz:
	if	(i == max(matriz)):
			b = i

print("O aluno que tem possui a maior nota e o aluno",v[b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:47:07) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(matriz)[0]
b = 0

for i in matriz:
	if	(i == max(matriz)):
			b = i

print("O aluno que tem possui a maior nota e o aluno",v[i])
	
-- EXECUTION TIME:
1.07559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/3210/main.py", line 5, in <module>
    a = shape(matriz)[0]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:47:14) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(matriz)[0]
b = 0

for i in matriz:
	if	(i == max(matriz)):
			b = i

		print("O aluno que tem possui a maior nota e o aluno",v[i])
	
-- EXECUTION TIME:
0.833146
-- ERROR:
  File "/home/codebench/codes/1861/3210/main.py", line 12
    print("O aluno que tem possui a maior nota e o aluno",v[i])
                                                              ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:49:18) 
-- CODE:
from numpy import*
from numpy.linalg import* 
v = input("d: ").split(',')
matriz = array(eval(input(" notas dos alunos: ")))
a = shape(matriz)[0]
b = 0

for i in range(a):
	 matriz[i] = v

print("O aluno que tem possui a maior nota e o aluno", max[])
	
-- EXECUTION TIME:
0.79718
-- ERROR:
  File "/home/codebench/codes/1861/3210/main.py", line 11
    print("O aluno que tem possui a maior nota e o aluno", max[])
                                                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
